--- a/lab5-explain/fuzzy-inference.ipynb
+++ b/lab5-explain/fuzzy-inference.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "# Импорт необходимых библиотек\n",
@@ -48,14 +48,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.280243260Z",
-     "start_time": "2023-06-15T15:53:13.232997640Z"
+     "end_time": "2023-06-15T16:19:13.092149849Z",
+     "start_time": "2023-06-15T16:19:13.049124922Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# Загрузка базы знаний из файла\n",
@@ -65,14 +65,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.280613918Z",
-     "start_time": "2023-06-15T15:53:13.280047912Z"
+     "end_time": "2023-06-15T16:19:13.092996943Z",
+     "start_time": "2023-06-15T16:19:13.092503013Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "# Функция подсчитывает степень принадлежности значения к каждому нечеткому множеству\n",
@@ -87,14 +87,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.281071570Z",
-     "start_time": "2023-06-15T15:53:13.280534779Z"
+     "end_time": "2023-06-15T16:19:13.093179066Z",
+     "start_time": "2023-06-15T16:19:13.092866328Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# Функция оценивает условие для каждого подмножества антецедентов (предшествующих условий)\n",
@@ -117,14 +117,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.281290673Z",
-     "start_time": "2023-06-15T15:53:13.280994685Z"
+     "end_time": "2023-06-15T16:19:13.093315032Z",
+     "start_time": "2023-06-15T16:19:13.093113713Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "# Функция для визуализации\n",
@@ -158,14 +158,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.282082233Z",
-     "start_time": "2023-06-15T15:53:13.281208297Z"
+     "end_time": "2023-06-15T16:19:13.093752867Z",
+     "start_time": "2023-06-15T16:19:13.093403699Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# Функция применяет правила из базы знаний к атрибутам пользователя\n",
@@ -177,26 +177,27 @@
     "            print(f\"Причина: было применено следующее правило из базы знаний:\")\n",
     "            print(f\"Если:\")\n",
     "            for condition in rule[\"antecedent\"]:\n",
-    "                print(f\"  Атрибут '{condition['attribute']}' принадлежит к нечеткому множеству '{condition['fuzzy_set']}'\")\n",
+    "                memberships = fuzzify(attributes[condition['attribute']], knowledge_base[\"attributes\"][condition['attribute']][\"fuzzy_sets\"])\n",
+    "                print(f\"  Атрибут '{condition['attribute']}' принадлежит к нечеткому множеству '{condition['fuzzy_set']}', степень принадлежности {memberships[condition['fuzzy_set']]}\")\n",
     "            print(f\"То:\")\n",
     "            print(f\"  Атрибут '{rule['consequent']['attribute']}' принимает значение '{rule['consequent']['value']}'\")\n",
     "            return rule[\"consequent\"]\n",
     "    decision = \"rejected\"\n",
     "    print(f\"Для пользователя с атрибутами {attributes}, решение: {decision}\")\n",
     "    print(f\"Причина: ни одно из правил из базы знаний не было применено.\")\n",
-    "    return {\"attribute\": \"credit\", \"value\": decision}\n"
+    "    return {\"attribute\": \"credit\", \"value\": decision}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:13.282225623Z",
-     "start_time": "2023-06-15T15:53:13.281501660Z"
+     "end_time": "2023-06-15T16:19:13.093904372Z",
+     "start_time": "2023-06-15T16:19:13.093648891Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +206,7 @@
       "Для пользователя с атрибутами {'age': 20, 'income': 20000, 'credit_history': 0}, решение: rejected\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'low'\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'low', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'rejected'\n"
      ]
@@ -225,7 +226,7 @@
       "Для пользователя с атрибутами {'age': 15, 'income': 25000, 'credit_history': 1}, решение: rejected\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'young'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'young', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'rejected'\n"
      ]
@@ -245,9 +246,9 @@
       "Для пользователя с атрибутами {'age': 35, 'income': 80000, 'credit_history': 1}, решение: approved\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged'\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium'\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged', степень принадлежности 1.0\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium', степень принадлежности 1.0\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'approved'\n"
      ]
@@ -267,7 +268,7 @@
       "Для пользователя с атрибутами {'age': 22, 'income': 30000, 'credit_history': 1}, решение: rejected\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'low'\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'low', степень принадлежности 0.9924242424242423\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'rejected'\n"
      ]
@@ -303,7 +304,7 @@
       "Для пользователя с атрибутами {'age': 50, 'income': 80000, 'credit_history': 0}, решение: rejected\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'bad'\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'bad', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'rejected'\n"
      ]
@@ -323,9 +324,9 @@
       "Для пользователя с атрибутами {'age': 30, 'income': 40000, 'credit_history': 1}, решение: approved\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged'\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium'\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged', степень принадлежности 1.0\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium', степень принадлежности 1.0\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'approved'\n"
      ]
@@ -345,9 +346,9 @@
       "Для пользователя с атрибутами {'age': 25, 'income': 60000, 'credit_history': 1}, решение: approved\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged'\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium'\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged', степень принадлежности 0.9906759906759904\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium', степень принадлежности 1.0\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'good', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'approved'\n"
      ]
@@ -367,7 +368,7 @@
       "Для пользователя с атрибутами {'age': 45, 'income': 70000, 'credit_history': 0}, решение: rejected\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'bad'\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'bad', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'rejected'\n"
      ]
@@ -387,9 +388,9 @@
       "Для пользователя с атрибутами {'age': 40, 'income': 55000, 'credit_history': 0.5}, решение: approved\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged'\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium'\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'average'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged', степень принадлежности 1.0\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium', степень принадлежности 1.0\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'average', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'approved'\n"
      ]
@@ -409,9 +410,9 @@
       "Для пользователя с атрибутами {'age': 22, 'income': 45000, 'credit_history': 0.5}, решение: approved\n",
       "Причина: было применено следующее правило из базы знаний:\n",
       "Если:\n",
-      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged'\n",
-      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium'\n",
-      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'average'\n",
+      "  Атрибут 'age' принадлежит к нечеткому множеству 'middle_aged', степень принадлежности 0.4\n",
+      "  Атрибут 'income' принадлежит к нечеткому множеству 'medium', степень принадлежности 1.0\n",
+      "  Атрибут 'credit_history' принадлежит к нечеткому множеству 'average', степень принадлежности 1.0\n",
       "То:\n",
       "  Атрибут 'credit' принимает значение 'approved'\n"
      ]
@@ -434,8 +435,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:53:16.978089074Z",
-     "start_time": "2023-06-15T15:53:13.281646763Z"
+     "end_time": "2023-06-15T16:19:16.816273577Z",
+     "start_time": "2023-06-15T16:19:13.093844649Z"
     }
    }
   }
